--- a/views/index.html
+++ b/views/index.html
@@ -212,7 +212,8 @@ pre {
 </style>
 
 </head>
-<body bgcolor="tomato">
+<body bgcolor="silver">
+<!--body bgcolor="tomato"-->
 
 <section class='container'>
           <hgroup>
